ide/src/tests/ir/snapshots/ide__tests__ssa__wat__local_tee.snap
---
source: src/tests/ssa/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (param %0) (result 1) (define %0 %1 %2) {
BLOCK 0
%1 = 1
%2 = %1
%0 = %1
KILL %1
RETURN %2;
};

