ide/src/tests/ir/snapshots/ide__tests__ssa__wat__test_if.snap
---
source: src/tests/ssa/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (result 0) (define %0) {
BLOCK 0
%0 = 1
IF %0 THEN GOTO 1 ELSE GOTO 2
BLOCK 1 
GOTO 2 // BLOCK ended for 1
BLOCK 2 // THEN block for 1
RETURN ;
};

