ide/src/tests/ir/snapshots/ide__tests__ssa__wat__test_simple_block.snap
---
source: src/tests/ssa/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (result 1) (define %0) {
BLOCK 0
BLOCK 1
%0 = 1
GOTO 2 // BLOCK ended for 1
BLOCK 2 // THEN block for 1
RETURN %0;
};

