ide/src/tests/ir/snapshots/ide__tests__ssa__wat__test_simple_loop.snap
---
source: src/tests/ssa/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (result 1) (define %0) {
BLOCK 0
BLOCK 1
BLOCK 3 // LOOP
%0 = 1
GOTO 2
GOTO 4 // BLOCK ended for 3
BLOCK 4 // THEN block for 3
GOTO 2 // BLOCK ended for 1
BLOCK 2 // THEN block for 1
RETURN %0;
};

